# diametrics

./: .gitignore  .pypirc.txt  0_overview.ipynb  1_upload_demo.ipynb  2_preprocessing_demo.ipynb  3_metrics_demo.ipynb  4_visualisations_demo.ipynb  4_visualizations_demo.ipynb  5_webapp copy.ipynb  5_webapp.ipynb  CITATION.cff  CITATION.cff.txt  README.md  experiment.ipynb  pyproject.toml  requirements.txt  setup.py  test_metrics.py  test_preprocessing.py  test_transform.py  tests_preprocessing.py  validation.ipynb
.github/workflows/: ci.yml  publish.yml
diametrics/: autoprocessing.py  checkDevices.py  classes.py  experiment.ipynb  funding proposal.docx  helper.py  metrics.py  preprocessing.py  test_helper.py  transformData.py
examples/: 1_upload_demo.ipynb  2_preprocessing_demo.ipynb  3_metrics_demo.ipynb  4_visualizations_demo.ipynb
pyCGM/: helper.py  metrics.py
src/diametrics/: _glycemic_events_helper.py  directory_structure.txt  metrics.py  preprocessing.py  transform.py  visualisations.py  visualizations.py
tests/: test_metrics.py  test_metrics2.py  test_preprocessing.py  test_transform.py  test_visualizations.py
tests/test_data/: example1.txt  example1.xlsx
tests/test_data/dexcom/: dexcom_eur_01.xlsx  dexcom_eur_02.xlsx  dexcom_eur_03.xlsx
tests/test_data/libre/: libre_amer_01.csv  libre_amer_02.csv
