[tool.poetry]
name = "diametrics"
version = "0.0.1"
description = "A package for calculating the metrics of glycemic control for Diabetes from CGM data"
authors = ["Catherine Russon"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
statistics = "^1.0.3.5"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
openpyxl = "^3.1.2"
pytest = "^8.1.1"
plotly = "^5.21.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# in pyproject.toml
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"


# in pyproject.toml
[tool.pytest.ini_options]
pythonpath = [
  "."
]


